# 137-counterfactual-explanations

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  counterfactual.py  data.py  example_usage.py  model.py  requirements.txt
rust_counterfactual/: Cargo.toml  README.md
rust_counterfactual/examples/: backtest.rs  fetch_data.rs  generate_cf.rs  train_classifier.rs
rust_counterfactual/src/: lib.rs
rust_counterfactual/src/api/: bybit.rs  mod.rs
rust_counterfactual/src/counterfactual/: generator.rs  metrics.rs  mod.rs  optimizer.rs
rust_counterfactual/src/model/: classifier.rs  config.rs  mod.rs
rust_counterfactual/src/strategy/: backtest.rs  mod.rs  signals.rs
