[package]
name = "rust_counterfactual"
version = "0.1.0"
edition = "2021"
description = "Counterfactual explanations for trading models"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Linear algebra
ndarray = { version = "0.15", features = ["serde"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "train_classifier"
path = "examples/train_classifier.rs"

[[example]]
name = "generate_cf"
path = "examples/generate_cf.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"
